...
            }

            Spacer(modifier = Modifier.height(24.dp))

            Row {
                Text(
                    text = "Don't have an account? Register now",
                    color = Color.LightGray,
                    fontSize = 14.sp,
                    modifier = Modifier
                        .clickable {
                            navController.navigate("signup")
                        }
...
